homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"homepage","namespace":"homepage"},"spec":{"ports":[{"port":80,"targetPort":3000}],"selector":{"app":"homepage"}}}
  creationTimestamp: "2026-05-24T16:14:33Z"
  name: homepage
  namespace: homepage
  resourceVersion: "11942"
  uid: b7d3ccf4-3e4d-40f8-845f-001966a0c6e1
spec:
  clusterIP: 10.43.61.196
  clusterIPs:
  - 10.43.61.196
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: homepage
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
