homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homepage-ingress
  namespace: homepage

spec:
  ingressClassName: traefik

  rules:
  - host: home.quantumsec.in
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: homepage
            port:
              number: 80

  tls:
  - hosts:
    - home.quantumsec.in

    secretName: homepage-tls
